Fixed spacing, table layout, and small data link errors

--- a/book_source/source/_static/custom.css
+++ b/book_source/source/_static/custom.css
@@ -1,11 +1,4 @@
 /* Undo styling rules updated by including panels. These are just the old styles but marked as important */
-
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1400px !important;
-  }
-}
-
 @media (min-width: 1200px) {
   .container,
   .container-lg,
@@ -20,4 +13,24 @@
 main.bd-content #main-content .prev-next-bottom .right-next i.fa-fw {
   padding-right: 0.75rem;
   padding-left: 0rem;
+}
+
+.table-section {
+  display: flex;
+  justify-content: space-around;
+}
+
+.table-div {
+  margin: 0 20px 0 20px;
+}
+
+@media (max-width: 768px) {
+  .table-section {
+    display: block;
+  }
+}
+
+
+.flex {
+  display: flex;
 }
